Fix white space for heading, remove duplicated layout for news

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,6 +11,7 @@ body {
 .project-name a {
     text-decoration: none;
     color: #ccc;
+    white-space: pre;
 }
 .main-menu {
     background: #555;
